src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/UnexpectedSmallIcon/InvalidUnexpectedSmallIcon.php
<?php

namespace Invalid\UnexpectedSmallIcon;

use Claroline\CoreBundle\Library\PluginBundle;

class InvalidUnexpectedSmallIcon extends PluginBundle
{
}